@@ -1,6 +1,6 @@
 Package: Epi
 Version: 1.1.44
-Date: 2013-02-02
+Date: 2013-02-06
 Title: A package for statistical analysis in epidemiology.
 Authors@R: c(person("Bendix", "Carstensen", role = c("aut", "cre"),
              email = "bxc@steno.dk"),
