@@ -149,13 +149,14 @@ apc.fit( data,
    The considerations behind the parametrizations used in this function
    are given in details in a preprint from Department of Biostatistics
    in Copenhagen:
-   \url{http://www.pubhealth.ku.dk/bs/publikationer/rr-06-1.pdf}, later
+     "Demography and epidemiology: Age-Period-Cohort models in the computer age",
+  \url{http://biostat.ku.dk/reports/2006/ResearchReport06-1.pdf/}, later
    published as:
    B. Carstensen: Age-period-cohort models for the Lexis diagram.
    Statistics in Medicine, 10; 26(15):3018-45, 2007. 
    }
 \author{
-   Bendix Carstensen, \url{http://www.biostat.ku.dk/~bxc}
+   Bendix Carstensen, \url{http://BendixCarstensen.com}
    }
 \seealso{
    \code{\link{apc.frame}},
