@@ -2,9 +2,9 @@
 \alias{apc.plot}
 \title{Plot the estimates from a fitted Age-Period-Cohort model}
 \description{
-This function plots the estimates created by \code{\link{apc.fit}} in a single 
-graph. It just calls \code{\link{apc.frame}} after computing some sensible 
-values of the parameters, and subsequently plots the estimates using 
+This function plots the estimates created by \code{\link{apc.fit}} in a single
+graph. It just calls \code{\link{apc.frame}} after computing some sensible
+values of the parameters, and subsequently plots the estimates using
 \code{\link{apc.lines}}.
 }
 \usage{
@@ -15,20 +15,21 @@ apc.plot(obj, r.txt = "Rate", ...)
   \item{r.txt}{ The text to put on the vertical rate axis. }
   \item{\dots}{ Additional arguments passed on to \code{\link{apc.lines}}. }
 }
-\value{ 
+\value{
  A numerical vector of length two, with names
   \code{c("cp.offset","RR.fac")}. The first is the offset for the cohort
   period-axis, the second the multiplication factor for the rate-ratio
   scale. Therefore, if you want to plot at \code{(x,y)} in the right panel,
-  use \code{(x-res["cp.offset"],y/res["RR.fac"])=(x-res[1],y/res[2])}.
+  use \code{(x-res["cp.offset"],y/res["RR.fac"])}
+  \code{=(x-res[1],y/res[2])}.
   This vector should be supplied for the parameter \code{frame.par} to
   \code{\link{apc.lines}} if more sets of estimates is plotted in the
   same graph.
 }
 \author{
   Bendix Carstensen, Steno Diabetes Center,
-  \url{http://www.pubhealth.ku.dk/~bxc}
-} 
+  \url{http://BendixCarstensen.com}
+}
 \seealso{
   \code{\link{apc.lines}} ,\code{\link{apc.frame}}, \code{\link{apc.fit}}
 }
