@@ -10,27 +10,27 @@ another one (the controls).
 }
 \format{
 This data frame contains the following columns:
-\tabular{rl}{
-\code{id}:       \tab Identification of person. \cr
-\code{sex}:      \tab Sex, 1: male / 2: female. \cr
-\code{birthdat}: \tab Date of birth, \code{Date} variable. \cr
-\code{contrast}: \tab Group, 1: Thorotrast / 2: Control. \cr
-\code{injecdat}: \tab Date of contrast injection, \code{Date} variable. \cr
-\code{volume}:   \tab Injected volume of Thorotrast in ml. Control
-                  patients have a 0 in this variable. \cr
-\code{exitdat}:  \tab Date of exit from the study, \code{Date} variable. \cr
-\code{exitstat}: \tab Status at exit, 1: dead / 2: alive,
+\describe{
+\item{\code{id}}{Identification of person.}
+\item{\code{sex}}{Sex, 1: male / 2: female.}
+\item{\code{birthdat}}{Date of birth, \code{Date} variable.}
+\item{\code{contrast}}{Group, 1: Thorotrast / 2: Control.}
+\item{\code{injecdat}}{Date of contrast injection, \code{Date} variable.}
+\item{\code{volume}}{Injected volume of Thorotrast in ml. Control
+                  patients have a 0 in this variable.}
+\item{\code{exitdat}}{Date of exit from the study, \code{Date} variable.}
+\item{\code{exitstat}}{Status at exit, 1: dead / 2: alive,
                   censored at closing of study, 20 February 1992 / 3:
-                  censored alive at some earlier date. \cr
-\code{cause}:    \tab Cause of death. See causes in the helpfile for
-                  \code{\link{gmortDK}} \cr
-\code{liverdat}: \tab Date of liver cancer diagnosis, \code{Date} variable. \cr
-\code{liver}:    \tab Indicator of liver cancer diagnosis. Not all livercancers
+                  censored alive at some earlier date.}
+\item{\code{cause}}{Cause of death. See causes in the helpfile for
+                  \code{\link{gmortDK}}.}
+\item{\code{liverdat}}{Date of liver cancer diagnosis, \code{Date} variable.}
+\item{\code{liver}}{Indicator of liver cancer diagnosis. Not all livercancers
                   are histologically verified, hence
-                  \code{liver >= hepcc + chola + hmang} \cr
-\code{hepcc}:    \tab Hepatocellular carcinoma at \code{liverdat}. \cr
-\code{chola}:    \tab Cholangiocellular carcinoma at \code{liverdat}. \cr
-\code{hmang}:    \tab Haemangisarcoma carcinoma at \code{liverdat}. \cr
+                  \code{liver >= hepcc + chola + hmang}}
+\item{\code{hepcc}}{Hepatocellular carcinoma at \code{liverdat}.}
+\item{\code{chola}}{Cholangiocellular carcinoma at \code{liverdat}.}
+\item{\code{hmang}}{Haemangisarcoma carcinoma at \code{liverdat}.}
 }
 }
 \source{
